--- a/docker2/docker-compose.yml
+++ b/docker2/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     image: mysql
     volumes:
       - ./data/master/:/var/lib/mysql/    #映射mysql的数据目录到宿主机，保存数据
-      - ./mysql-files/master/:/var/lib/mysql-files 
+      - ./mysql-files/master/:/var/lib/mysql-files #尚未用到,必须要有
       - ./conf/master/my.cnf:/etc/mysql/my.cnf #把mysql的配置文件映射到容器的相应目录
     environment:
       - "MYSQL_ROOT_PASSWORD=mysql"
@@ -29,7 +29,7 @@ services:
     image: mysql
     volumes:
       - ./data/slave/:/var/lib/mysql/    #映射mysql的数据目录到宿主机，保存数据
-      - ./mysql-files/slave/:/var/lib/mysql-files 
+      - ./mysql-files/slave/:/var/lib/mysql-files #尚未用到,必须要有
       - ./conf/slave/my.cnf:/etc/mysql/my.cnf #把mysql的配置文件映射到容器的相应目录
     environment:
       - "MYSQL_ROOT_PASSWORD=mysql"
